--- a/bapaer-bank-html-file/account.html
+++ b/bapaer-bank-html-file/account.html
@@ -35,12 +35,12 @@
             <div class="container">
                 <div class="balane-add-input">
                     <div class="deposit-input">
-                        <h3>Please Deposit</h3>
+                        <h3 class="deposit-title">Please Deposit</h3>
                         <input id="deposit-amount" class="input-amount" type="text" placeholder="Amount">
                         <button id="deposit-button" class="deposit-btn">Submit</button>
                     </div>
                     <div class="deposit-input">
-                        <h3>Please Withdrawal</h3>
+                        <h3 class="deposit-title">Please Withdrawal</h3>
                         <input id="withdraw-amount" class="input-amount" type="text" placeholder="Amount">
                         <button id="withdraw-button" class="deposit-btn">Submit</button>
                     </div>
