--- a/bapaer-bank-html-file/account.html
+++ b/bapaer-bank-html-file/account.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Money</title>
+    <!-- css file link  -->
     <link rel="stylesheet" href="../css file/account.css">
 </head>
 <body>
+    <!-- headet section  -->
     <header>
-        <h2>hello bapaer bank</h2>
+        <h2 class="account-title">Welcome bapaer bank</h2>
     </header>
+    <!-- main section start  -->
     <main>
+        <!-- add balance and withdraw balance  -->
         <section class="add-balance">
             <div class="container">
                <div class="box">
@@ -30,7 +34,7 @@
                </div>
             </div>
         </section>
-
+                            <!-- diposit amount add withdraw amount  -->
         <section>
             <div class="container">
                 <div class="balane-add-input">
@@ -48,5 +52,7 @@
             </div>
         </section>
     </main>
+    <!-- js file link  -->
+    <script src="../baper-bank-js-file/account.js"></script>
 </body>
 </html>
